--- a/Application/Home/View/Index/menu.html
+++ b/Application/Home/View/Index/menu.html
@@ -131,9 +131,17 @@
                 </ul>
             </li>
             <li class="explode" key="02_cat_and_goods" name="menu">
-                系统管理
+                好友管理
                 <ul>
-                    <li class="menu-item"><a href="{:U('User/edit')}" target="main-frame">修改个人信息</a></li>
+                    <li class="menu-item"><a href="{:U('Friends/add')}" target="main-frame">添加好友</a></li>
+                    <li class="menu-item"><a href="{:U('Friends/lst')}" target="main-frame">好友列表</a></li>
+                </ul>
+            </li>
+            <li class="explode" key="02_cat_and_goods" name="menu">
+                系统功能
+                <ul>
+                    <li class="menu-item"><a href="{:U('System/add')}" target="main-frame">发送系统消息</a></li>
+                    <li class="menu-item"><a href="{:U('Friends/lst')}" target="main-frame">好友列表</a></li>
                 </ul>
             </li>
 
